--- a/frontend/exam/style.css
+++ b/frontend/exam/style.css
@@ -77,42 +77,36 @@ body{
     margin: 5px;
 }
 
-label {
+.question label {
     display: flex;
     cursor: pointer;
     font-weight: 500;
     position: relative;
     overflow: hidden;
     margin-bottom: 0.375em;
-    /* Accessible outline */
-    /* Remove comment to use */
-    /*
-        &:focus-within {
-                outline: .125em solid $primary-color;
-        }
-    */
+
   }
-  label input {
+.question   label input {
     position: absolute;
     left: -9999px;
   }
-  label input:checked + span {
+.question   label input:checked + span {
     background-color: #d6d6e5;
   }
-  label input:checked + span:before {
+.question   label input:checked + span:before {
     box-shadow: inset 0 0 0 0.4375em #00005c;
   }
-  label span {
+.question   label span {
     display: flex;
     align-items: center;
     padding: 0.375em 0.75em 0.375em 0.375em;
     border-radius: 99em;
     transition: 0.25s ease;
   }
-  label span:hover {
+.question   label span:hover {
     background-color: #d6d6e5;
   }
-  label span:before {
+.question   label span:before {
     display: flex;
     flex-shrink: 0;
     content: "";
